Probably fix tab not showing properly

--- a/tabs.css
+++ b/tabs.css
@@ -4,7 +4,7 @@
 .tab {
   float: left;
   overflow: hidden;
-  
+  display: none;
   width: 30%;
   height: 300px;
 }
